# address-service

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start_app.sh  test_main.http
app/: __init__.py  config.py  main.py
app/db/: base.py  session.py
app/db/models/: address.py
app/schemas/: address_schema.py
db/: .env  Dockerfile
db/postgresql/: 001_init.sh  002_constraints.sql
