[tool.poetry]
name = "address-service"
version = "0.1.0"
description = ""
authors = ["Jeferson Ferreira da Silva <jeferson.mab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.3"
haversine = "^2.8.1"
flask-cors = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
